--- a/app/src/main/res/layout/activity_area.xml
+++ b/app/src/main/res/layout/activity_area.xml
@@ -10,7 +10,8 @@
         android:id="@+id/areaListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fastScrollEnabled="true">
+        android:fastScrollEnabled="true"
+        android:layout_marginTop="20dp">
     </ListView>
 
 </LinearLayout>
